--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
-<%- include ('partials/_headers') -%>
+<%- include('partials/_headers') -%>
 
 <body>
     <div class="tm-page-wrap mx-auto">
         <div class="position-relative">
 
-            <%- include ('partials/_navigation') -%>
-          
+            <%- include('partials/_navigation') -%>
+
+
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
                     <p class="tm-welcome-text mb-1 text-white">Video Catalog is brought to you by TemplateMo.</p>
@@ -23,47 +24,28 @@
                 </video>    
             </div>
             
-            <i id="tm-video-control-button" class="fas fa-pause"></i>
+            <i id="tm-video-control-button" class="fas fa-plus"></i>
         </div>
 
         <div class="container-fluid">
             <div id="content" class="mx-auto tm-content-container">
                 <main>
-                    <!-- <div class="row">
-                        <div class="col-12">
-                            <h2 class="tm-page-title mb-4">Our Video Catalog</h2>
-                            <div class="tm-categories-container mb-5">
-                                <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
-                                <ul class="nav tm-category-list">
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">All</a></li>
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Drone Shots</a></li>
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Nature</a></li>
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Actions</a></li>
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Featured</a></li>
-                                </ul>
-                            </div>        
-                        </div>
-                    </div> -->
-                    
                     <div class="row tm-catalog-item-list">
-                        <% for (let i =0 ; i< photos.length; i++) { %>
 
-                     
+                        <% for (let i = 0; i < photos.length; i++) { %>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
                                 <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-                                <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                <a href="/photos/<%= photos[i]._id %>" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>    
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title"> <%= photos[i].title %></h3>
-                                <p class="tm-catalog-item-text">Video thumbnail has a link to another HTML page. 
-                                    Categories <span class="tm-text-secondary"> <%= photos[i].description %></p>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title"><%= photos[i].title %></h3>
+                                <p class="tm-catalog-item-text"><%=photos[i].description %></p>
                             </div>
                         </div>
-                       
-                         <% } %>
+                        <% } %>
                     </div>
 
                     <!-- Catalog Paging Buttons -->
@@ -77,8 +59,8 @@
                         </ul>
                     </div>
                 </main>
-                <%- include ('partials/_footer') -%>
-         
+
+                <%- include('partials/_footer') -%>
     <script>
         function setVideoSize() {
             const vidWidth = 1920;
@@ -88,47 +70,36 @@
             let newVidHeight = windowWidth * vidHeight / vidWidth;
             let marginLeft = 0;
             let marginTop = 0;
-
             if (newVidHeight < 500) {
                 newVidHeight = 500;
                 newVidWidth = newVidHeight * vidWidth / vidHeight;
             }
-
             if(newVidWidth > windowWidth) {
                 marginLeft = -((newVidWidth - windowWidth) / 2);
             }
-
             if(newVidHeight > 720) {
                 marginTop = -((newVidHeight - $('#tm-video-container').height()) / 2);
             }
-
             const tmVideo = $('#tm-video');
-
             tmVideo.css('width', newVidWidth);
             tmVideo.css('height', newVidHeight);
             tmVideo.css('margin-left', marginLeft);
             tmVideo.css('margin-top', marginTop);
         }
-
         $(document).ready(function () {
             /************** Video background *********/
-
             setVideoSize();
-
             // Set video background size based on window size
             let timeout;
             window.onresize = function () {
                 clearTimeout(timeout);
                 timeout = setTimeout(setVideoSize, 100);
             };
-
             // Play/Pause button for video background      
             const btn = $("#tm-video-control-button");
-
             btn.on("click", function (e) {
                 const video = document.getElementById("tm-video");
                 $(this).removeClass();
-
                 if (video.paused) {
                     video.play();
                     $(this).addClass("fas fa-pause");
